[project]
name = "steammarket-api"
version = "0.1.0"
description = "provides async-interface for steammarket_api"
authors = [
    {name = "xEm1rald",email = "rostikroi2009@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "loguru (>=0.7.3,<0.8.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
